--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fitpage-coding-round",
-  "version": "0.1.0",
+  "name": "fitbit-coding-round",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -22,5 +22,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "author": "Chinmay Raut",
+  "license": "ISC"
 }
